Fixed style so sidebar is removed on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -682,6 +682,14 @@ ul.site-nav {
     .post-stub-tag {
         display: none;
     }
+
+    article.main {
+        width: 100%;
+    }
+
+    aside.sidebar {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 600px) {
